[package]
name = "tracing-async2"
description = "Generic tracing layer library for working with tracing events including for async work."
version = "0.2.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/macprog-guy/tracing-async2.git"
keywords = ["tokio","tracing","async","callback","database"]
categories = ["asynchronous","development-tools::debugging"]

[dependencies]
serde = {version=">=1.0.219", features=["derive"], optional=true}
serde_json = {version=">=1.0", features=["preserve_order"], optional=true}
tokio = {version=">=1.44", features=["macros","rt","sync","time"], optional=true}
tracing = ">=0.1"
tracing-subscriber = {version=">=0.3", features=["env-filter","default"]}

[dev-dependencies]
insta = {version=">=1.42", features=["redactions","json"]}

[features]
default     = ["accumulator","async","span"]
accumulator = ["span"]
async       = ["span","dep:tokio"]
span        = ["dep:serde","dep:serde_json"]

[badges]
maintenance = {status="actively-developed"}
