[workspace]
members = ["tracing-async2","tracing-async2-macros", "tracing-async2-macros-test"]
resolver = "2"

[profile.dev]
debug = false

[profile.release]
strip = "symbols"
debug = false

[workspace.dependencies]
tokio = {version=">=1.1", features=["macros","rt","sync","time"]}
tracing = ">=0.1"
tracing-subscriber = {version=">=0.3", features=["env-filter","default"]}
