[package]
name = "tracing-async2-macros"
description = "Generic tracing layer library for working with tracing events including for async work."
version = "0.2.10"
edition = "2024"
license = "MIT"
homepage = "https://github.com/macprog-guy/tracing-async2.git"
repository = "https://github.com/macprog-guy/tracing-async2.git"
documentation = "https://docs.rs/tracing-async2/0.2.9/tracing_async2/"
keywords = ["tokio","tracing","async","callback","database"]
categories = ["asynchronous","development-tools::debugging"]

[dependencies]
proc-macro2 = "1.0.95"
quote = ">=1.0"
syn = {version=">=2.0", features=["full"]}

[lib]
proc-macro = true
