[package]
name = "tracing-async2"
description = "Generic tracing layer library for working with tracing events including for async work."
version = "0.2.8"
edition = "2024"
license = "MIT"
repository = "https://github.com/macprog-guy/tracing-async2.git"
keywords = ["tokio","tracing","async","callback","database"]
categories = ["asynchronous","development-tools::debugging"]

[dependencies]
quote = {version=">=1", optional=true}
serde = {version=">=1", features=["derive"], optional=true}
serde_json = {version=">=1.0", features=["preserve_order"], optional=true}
syn = {version=">=2", optional=true}
tokio = {workspace = true, optional=true}
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-async2-macros = {path="../tracing-async2-macros", optional=true}

[dev-dependencies]
insta = {version=">=1.42", features=["redactions","json"]}

[features]
default     = ["accumulator","async","span","macros"]
accumulator = ["span"]
async       = ["span","dep:tokio"]
span        = ["dep:serde","dep:serde_json"]
test        = ["dep:quote","dep:syn"]
macros      = ["dep:tracing-async2-macros"]


[badges]
maintenance = {status="actively-developed"}
